Random spec testing

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
 
+<div class="grid-container">
+	<div class="span-6" style="height: 100px;">
+		&nbsp;
+	</div>
+	<div class="span-6" style="height: 100px;">
+		&nbsp;
+	</div>
+</div>
 
 
 
